--- a/config.toml
+++ b/config.toml
@@ -2,12 +2,14 @@
 base_url = "https://laughlax.github.io"
 
 # Whether to automatically compile all Sass files in the sass directory
-compile_sass = true
+compile_sass = false
 
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 
 theme = "juice"
+
+output_dir = "docs"
 
 [markdown]
 # Whether to do syntax highlighting
