--- a/config.toml
+++ b/config.toml
@@ -7,8 +7,9 @@ compile_sass = false
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 
-theme = "juice"
+title = "David M. Haralson"
 
+theme = "juice"
 output_dir = "docs"
 
 [markdown]
